force-app/main/default/objects/Campaign/fields/mcdm_15__DM_Manual_Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Manual_Approval_Threshold__c</fullName>
    <label>DM Manual Approval Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>