force-app/main/default/objects/Campaign/fields/mcdm_15__LinkedJourney__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__LinkedJourney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Journey</label>
    <referenceTo>mcdm_15__MarketingCloudLinkedJourney__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>